[package]
name = "ipmi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nonmax = "0.5"
bitflags = "1.3"
time = { version = "0.3", optional = true, default-features = false, features = [ "formatting" ] }

# For unix-file IPMI
nix = { version = "0.26", default-features = false, features = [ "ioctl" ], optional = true }

[features]
default = [ "time", "unix-file" ]

# Connection features
unix-file = [ "nix" ]


[dev-dependencies.pretty_env_logger]
version = "0.4"

[[example]]
name = "get_info"
required-features = [ "unix-file" ]