[package]
name = "ipmi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nonmax = "0.5"
bitflags = "1.3"
time = { version = "0.3", optional = true, default-features = false, features = [ "formatting" ] }
parking_lot = { version = "0.12", optional = true }

# For unix-file IPMI
nix = { version = "0.26", default-features = false, features = [ "ioctl" ], optional = true }

[features]
default = [ "time", "unix-file", "log-to-file" ]
log-to-file = [ "parking_lot" ]

# Connection features
unix-file = [ "nix" ]


[dev-dependencies]
pretty_env_logger = "0.4"
indicatif = "0.17"

[[example]]
name = "get_info"
required-features = [ "unix-file" ]