[package]
name = "ipmi-rs"
version = "0.2.1"
edition = "2021"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "ipmi", "sysadmin", "bmc" ]
categories = [ "operating-systems" ]
description = "A pure rust implementation of the IPMI spec"
repository = "https://github.com/datdenkikniet/ipmi-rs"
documentation = "https://docs.rs/ipmi-rs/latest"

[dependencies]
log = "0.4"
nonmax = "0.5"
bitflags = "1.3"
time = { version = "0.3", optional = true, default-features = false, features = [ "formatting" ] }
parking_lot = { version = "0.12", optional = true }
md5 = "0.7"

# For unix-file IPMI
nix = { version = "0.26", default-features = false, features = [ "ioctl" ], optional = true }
hmac = "0.12.1"
sha1 = "0.10.6"
rand = "0.8.5"
aes = "0.8.4"
cbc = "0.1.2"
getrandom = "0.2.12"

[features]
default = [ "time", "unix-file", "log-to-file" ]
log-to-file = [ "parking_lot" ]

# Connection features
unix-file = [ "nix" ]

[dev-dependencies]
pretty_env_logger = "0.4"
indicatif = "0.17"
clap = { version = "4.3", features = [ "derive" ]}
hex = "0.4.3"

[[example]]
name = "get-info"
required-features = [ "unix-file" ]
