[package]
name = "ipmi-rs"
version = "0.5.0"
edition = "2021"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "ipmi", "sysadmin", "bmc" ]
categories = [ "parser-implementations", "network-programming" ]
description = "A pure rust implementation of the IPMI spec"
repository = "https://github.com/datdenkikniet/ipmi-rs"
documentation = "https://docs.rs/ipmi-rs/latest"

[dependencies]
log = "0.4"
nonmax = "0.5"
bitflags = "1.3"
md5 = { version = "0.7", optional = true }
ipmi-rs-core = { path = "../ipmi-rs-core", version = "0.5.0" }

# For unix-file IPMI
nix = { version = "0.26", default-features = false, features = [ "ioctl", "poll" ], optional = true }

# For RMCP+
hmac = "0.12.1"
sha1 = "0.10.6"
rand = "0.8.5"
aes = "0.8.4"
cbc = "0.1.2"
getrandom = "0.2.12"

[features]
default = [ "unix-file", "md5" ]

# Connection features
unix-file = [ "nix" ]

[dev-dependencies]
pretty_env_logger = "0.4"
indicatif = "0.17"
clap = { version = "4.3", features = [ "derive" ]}
hex = "0.4.3"
ipmi-rs-log = { path = "../ipmi-rs-log", version = "0.1.0" }

[[example]]
name = "get-info"
required-features = [ "unix-file" ]

[[example]]
name = "sel"
required-features = [ "unix-file" ]
